syntax = "proto3";
package stride.auction;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/Stride-Labs/stride/v24/x/auction/types";

enum AuctionType {
  // Default value - should not be used
  AUCTION_TYPE_UNSPECIFIED = 0;
  // First-Come First-Served auction
  AUCTION_TYPE_FCFS = 1;
}
message Params {}

message Auction {
  // Auction type
  AuctionType type = 1;

  // Token denom being auctioned
  string denom = 2;

  // Whether auction is active
  bool enabled = 3;

  // Price multiplier (e.g. 0.95 for 5% discount)
  string price_multiplier = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  // Minimum STRD bid amount
  string min_bid_amount = 5 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  // Address to send the auction proceeds to
  string beneficiary = 6 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // Total amount of STRD burned
  string total_strd_burned = 7 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  // Total amount of tokens sold
  string total_tokens_sold = 8 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}
