syntax = "proto3";
package stride.auction;

import "cosmos/msg/v1/msg.proto";
import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/Stride-Labs/stride/v24/x/auction/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // User messages

  // PlaceBid places a bid to buy a token off an auction
  rpc PlaceBid(MsgPlaceBid) returns (MsgPlaceBidResponse);

  // Admin messages

  // CreateAuction creates a new auction
  rpc CreateAuction(MsgCreateAuction) returns (MsgCreateAuctionResponse);
  // CreateAuction updates an existing auction
  rpc UpdateAuction(MsgUpdateAuction) returns (MsgUpdateAuctionResponse);
}

// MsgPlaceBid defines the message for bidding in a token auction
message MsgPlaceBid {
  option (cosmos.msg.v1.signer) = "bidder";
  option (amino.name) = "stride/x/auction/MsgPlaceBid";

  // Bidder's address
  string bidder = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // Token being bid on
  string token_denom = 2;

  // Amount of tokens requested in base units (utoken)
  string utoken_amount = 3 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  // Amount of STRD being paid in base units (ustrd)
  string ustrd_amount = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

message MsgPlaceBidResponse {}

// MsgCreateAuction defines the message for adding a token auction
message MsgCreateAuction {
  option (cosmos.msg.v1.signer) = "admin";
  option (amino.name) = "stride/x/auction/MsgCreateAuction";

  // Admin's address
  string admin = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // Denom on Stride of the token being auctioned (e.g. "ibc/...")
  string denom = 2;

  // Whether auction is active
  bool enabled = 3;

  // Price multiplier (e.g. 0.95 for 5% discount)
  string price_multiplier = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  // Minimum STRD bid amount
  string min_bid_amount = 5 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  string beneficiary = 6 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
}

message MsgCreateAuctionResponse {}

// MsgUpdateAuction defines the message for adding a token auction
message MsgUpdateAuction {
  option (cosmos.msg.v1.signer) = "admin";
  option (amino.name) = "stride/x/auction/MsgUpdateAuction";

  // Admin's address
  string admin = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // Token denom being updated
  string denom = 2;

  // Whether auction is active
  bool enabled = 3;

  // Price multiplier (e.g. 0.95 for 5% discount)
  string price_multiplier = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  // Minimum STRD bid amount
  string min_bid_amount = 5 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  string beneficiary = 6 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
}

message MsgUpdateAuctionResponse {}
